# KufarPars

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
data/: kufarpars_bot_state.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_source_aware_seen_ads.py
src/apartmentfinder/: __init__.py
src/apartmentfinder/application/: filtering.py  monitoring.py  ports.py  source_registry.py
src/apartmentfinder/domain/: models.py
src/apartmentfinder/infrastructure/: __init__.py  config.py  source_registry.py
src/apartmentfinder/infrastructure/persistence/: models.py  storage.py
src/apartmentfinder/infrastructure/sources/: __init__.py
src/apartmentfinder/infrastructure/sources/kufar/: __init__.py  client.py  filters.py  parser.py  source.py
src/apartmentfinder/infrastructure/sources/realt/: __init__.py  client.py  parser.py  source.py
src/apartmentfinder/interfaces/telegram/: bot.py  formatting.py  search_catalog.py
src/kufarpars/: __init__.py  bot_storage.py  cli.py  client.py  config.py  db.py  filters.py  listing_sources.py  models.py  parser.py  realt_client.py  realt_parser.py  telegram_bot.py  telegram_formatting.py
tests/: test_architecture.py  test_bot_storage.py  test_cli.py  test_client.py  test_config.py  test_filters.py  test_listing_sources.py  test_parser.py  test_realt_parser.py  test_telegram_bot.py  test_telegram_formatting.py
