[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kufarpars"
version = "0.1.0"
description = "Parser utilities for Kufar listings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27,<4",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
kufarpars-bot = "kufarpars.telegram_bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
