[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apartmentfinder"
version = "0.1.0"
description = "Extensible Telegram bot for rental listing alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27,<4",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
apartmentfinder-bot = "apartmentfinder.interfaces.telegram.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
